--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,15 @@ MarkupSafe==1.1.1
 pip==20.1.1
 setuptools==47.3.1
 Werkzeug==1.0.1
+alembic==1.4.2
+Flask-Migrate==2.5.3
+Flask-SQLAlchemy==2.4.3
+Flask-WTF==0.14.3
+Mako==1.1.3
+plotly==4.8.2
+python-dateutil==2.8.1
+python-editor==1.0.4
+retrying==1.3.3
+six==1.15.0
+SQLAlchemy==1.3.18
+WTForms==2.3.1
